--- a/source/server/annotation/templates/project_page.html
+++ b/source/server/annotation/templates/project_page.html
@@ -37,8 +37,9 @@
           <b-badge pill variant="info">{{ project.type }}</b-badge></br>
           Описание: {{ project.description }} 
         </p>
+
         <p class="h5">Количество обработанных документов</p>
-        <b-progress class="w-50" :max="rows" height="2rem">
+        <b-progress class="w-50" :max="total_docs" height="2rem">
           <b-progress-bar :value="processed_docs">
             Обработано: <strong>${ processed_docs } / ${ total_docs }</strong>
           </b-progress-bar>
@@ -54,20 +55,21 @@
             :item="doc"
             :key="doc.id"
             v-for="doc in docs">
-              <h5 class="mb-1">${doc.name}</h5>
+              <h5 class="mb-1">${doc.file_name}</h5>
               <div class="d-flex justify-content-between">
                 <p class="mb-1">
-                  ${doc.description | truncate(50)}
+                  ${doc.sequence_preview | truncate(50)}
                 </p>
                 <b-button :id="`doc-${doc.id}`" variant="danger">Удалить</b-button>
               </div>
             </b-list-group-item>
           </b-list-group>
           <b-pagination
-          v-model="current_page"
-          :total-rows="rows"
-          :per-page="per_page"
-          aria-controls="docs-table">
+            v-model="current_page"
+            :total-rows="total_docs"
+            :per-page="docs_by_page"
+            aria-controls="docs-table"
+            @input="getAllDocumentPage(current_page)">
           </b-pagination>
         </div>
       </div>
