--- a/source/server/annotation/templates/project_import.html
+++ b/source/server/annotation/templates/project_import.html
@@ -50,10 +50,12 @@ example	_
 
     <form>
       {% verbatim %}
+
+      <p>Поддерживается загрузка архивов zip. Файл должен иметь соответствующие расширение (.zip).</p>
+
       <div>
         <b-alert dismissible v-bind:variant="st_variant" :show="st_show">{{st_value}}</b-alert>
       </div>
-      
 
       <div class="form-group">
         <div class="input-group input-file" name="file">
