--- a/source/server/annotation/templates/project_page.html
+++ b/source/server/annotation/templates/project_page.html
@@ -39,7 +39,7 @@
         </p>
 
         <p class="h5">Количество обработанных документов</p>
-        <b-progress class="w-50" :max="total_docs" height="2rem">
+        <b-progress class="w-75" :max="total_docs" height="2rem">
           <b-progress-bar :value="processed_docs">
             Обработано: <strong>${ processed_docs } / ${ total_docs }</strong>
           </b-progress-bar>
@@ -55,13 +55,21 @@
             :item="doc"
             :key="doc.id"
             v-for="doc in docs">
-              <h5 class="mb-1">${doc.file_name}</h5>
               <div class="d-flex justify-content-between">
+              <h5 class="mb-1">${doc.file_name}</h5> 
+              <b-button v-b-toggle="`doc-${doc.id}`" size="sm" variant="danger">Удалить</b-button>
+              </div>
+              <div class="d-flex">
                 <p class="mb-1">
                   ${doc.sequence_preview | truncate(50)}
                 </p>
-                <b-button :id="`doc-${doc.id}`" variant="danger">Удалить</b-button>
               </div>
+              <b-collapse :id="`doc-${doc.id}`">
+                <b-card border-variant="danger" header-bg-variant="danger" header-text-variant="white" header="Вы действительно хотите удалить документ?" class="text-left mt-2">
+                  <b-button variant="outline-danger" @click="deleteDoc(doc.id)">Да</b-button>
+                  <b-button v-b-toggle="`doc-${doc.id}`" variant="outline-success">Нет</b-button>
+                </b-card>
+              </b-collapse>
             </b-list-group-item>
           </b-list-group>
           <b-pagination
