Changes: get action template, add label template, rename tl annotation

--- a/source/server/annotation/templates/project_page.html
+++ b/source/server/annotation/templates/project_page.html
@@ -21,7 +21,7 @@
       </li>
       <hr>
       <li>
-        <a href="#">Label</a>
+        <a href="tl-labels" class="{% if request.resolver_match.kwargs.action == 'tl-labels' %}active{% endif %}">Метки</a>
       </li>
       <hr>
       <li>
