--- a/source/server/annotation/templates/project_tl_annotation.html
+++ b/source/server/annotation/templates/project_tl_annotation.html
@@ -14,8 +14,8 @@
 	<div class="card-body">
 		<p v-for="seq in doc_data">${seq.text}</p>
 		<div class="d-flex justify-content-between">
-			<b-button variant="primary" @click="onPrev()">Предыдущий</b-button>
-			<b-button variant="primary" @click="onNext()">Следующий</b-button>
+			<b-button variant="primary" @click="onPrev()" :disabled="!bt_prev_enable">Предыдущий</b-button>
+			<b-button variant="primary" @click="onNext()" :disabled="!bt_next_enable">Следующий</b-button>
 		</div>
 	</div>
 
