--- a/source/server/annotation/templates/project_tl_annotation.html
+++ b/source/server/annotation/templates/project_tl_annotation.html
@@ -8,11 +8,43 @@
 <h4 class="mb-4 mt-2">Аннотации</h4>
 <div id="project-annotaion" class="card w-75">
 	<div class="card-header">
-		<span class="badge badge-pill badge-info">Label1</span>
-		<span class="badge badge-pill badge-danger">Label2</span>
+		<div
+			class="tags has-addons label_tag" 
+			v-for="label in labels">
+				<span
+					class="tag"
+					:style="{'background-color': label.color_background, color: label.color_text}">
+						${label.name}
+				</span>
+		  		<span class="tag is-dark">_</span>
+		</div>
 	</div>
+
 	<div class="card-body">
-		<p v-for="data in data_render" v-html="data"></p>
+		
+		<!-- <p v-for="data in data_render" v-html="data" class="tl_anno_row"></p> -->
+		<!-- <tl-label v-for="seq in doc_data" class="tl_anno_row">${seq}</tl-label> -->
+
+		<div v-for="data in doc_render" class="tl_anno_row">
+			<span v-for="(chunk, i_chunk) in data.chunks"
+				v-bind:class="{ tag: chunk.type == 'label', 'is-medium': chunk.type == 'label' }"
+				v-bind:style="[chunk.type == 'label' ? {
+						'background-color': labels_hash[chunk.obj.label_id].color_background,
+						'color': labels_hash[chunk.obj.label_id].color_text,
+						'text-indent': '0px'
+					} : {}]">
+				${chunk.text}
+				<button 
+					v-if="chunk.type == 'label'"
+					@click="onDeleteLabel(chunk.obj.id, data.obj.id, i_chunk)"
+					type="button btn-sm"
+					class="close"
+					style="margin-left: 5px;">
+						<span aria-hidden="true">&times;</span>
+				</button>
+			</span>
+		</div>
+
 		<div class="d-flex justify-content-between">
 			<b-button variant="primary" @click="onPrev()" :disabled="!bt_prev_enable">Предыдущий</b-button>
 			<b-button variant="primary" @click="onNext()" :disabled="!bt_next_enable">Следующий</b-button>
