--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -23,6 +23,7 @@
     href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css"
   />
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bulma-tag.css' %}">
 
   <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script> -->
   <script src="https://unpkg.com/vue@latest/dist/vue.js"></script>
