add bulma close tag button

--- a/source/server/annotation/templates/project_tl_annotation.html
+++ b/source/server/annotation/templates/project_tl_annotation.html
@@ -38,9 +38,7 @@
 					v-if="chunk.type == 'label'"
 					@click="onDeleteLabel(chunk.obj.id, data.obj.id, i_chunk)"
 					type="button btn-sm"
-					class="close"
-					style="margin-left: 5px;">
-						<span aria-hidden="true">&times;</span>
+					class="delete is-small">
 				</button>
 			</span>
 		</div>
