--- a/source/server/annotation/templates/project_tl_labels.html
+++ b/source/server/annotation/templates/project_tl_labels.html
@@ -4,16 +4,36 @@
 
 {% block project-content %}
 
-<div id="project-labels">
-	Метки
+<div class="container-fluid" id="project-labels">
+	<div class="d-inline-flex">
+		<button type="button" class="btn btn-primary" v-on:click="createLabel()">Новая метка</button>
+	</div>
+	<div class="d-flex flex-row pt-4" v-if="new_label">
+		  <b-card class="flex-fill" border-variant="dark">
+		  	<b-card-text>
+		  		<span class="tag has-addons is-medium" :style="{color: new_label.color_text, backgroundColor: new_label.color_background}">${ new_label.name }</span>
+		  	</b-card-text>
+		  	<div class="d-flex justify-content-start">
+		  		<b-form>
+		  			<label for="label_name">Название метки</label>
+		  			<b-input
+      				id="label_name"
+      				class="mb-2 mr-sm-2 mb-sm-0"
+      				placeholder="Введите название"
+      				v-model="new_label.name">	
+      			</b-input>
+		  		</b-form>
+		  		<button type="button" class="btn btn-info align-self-end ml-3" @click="getColor(new_label)">Случайный цвет</button>
+		  		<button type="button" class="btn btn-outline-success align-self-end ml-auto" @click="postLabel()">Добавить метку</button>
+					<button type="button" class="btn btn-outline-danger align-self-end ml-1" @click="cancelCreate()">Отменить</button>
+		  	</div>
+		  </b-card>
+	</div>
 
-<button class="button is-large">
-  Large button
-</button>
 </div>
 
 {% endblock %}
 
 {% block js-script %}
-  <!-- <script src="{% static 'js/project_tl_labels.js' %}"></script> -->
+  <script src="{% static 'js/project_tl_labels.js' %}"></script>
 {% endblock %}
