--- a/source/server/annotation/templates/project_tl_annotation.html
+++ b/source/server/annotation/templates/project_tl_annotation.html
@@ -30,8 +30,8 @@
 			<span v-for="(chunk, i_chunk) in data.chunks"
 				v-bind:class="{ tag: chunk.type == 'label', 'is-medium': chunk.type == 'label' }"
 				v-bind:style="[chunk.type == 'label' ? {
-						'background-color': labels_hash[chunk.obj.label_id].color_background,
-						'color': labels_hash[chunk.obj.label_id].color_text,
+						'background-color': labels_hash[chunk.obj.label].color_background,
+						'color': labels_hash[chunk.obj.label].color_text,
 						'text-indent': '0px'
 					} : {}]"
 					:id="i_chunk">${chunk.text}
