--- a/source/server/annotation/templates/project_tl_labels.html
+++ b/source/server/annotation/templates/project_tl_labels.html
@@ -29,7 +29,51 @@
 		  	</div>
 		  </b-card>
 	</div>
-
+	<div class="d-flex flex-row pt-4">
+		<b-card class="flex-fill" border-variant="success" header-bg-variant="transparent" :header="`${labels.length} метки в проекте`">
+			<b-list-group
+			v-for="label in labels"
+			:key="label.id">
+				<b-list-group-item class="border-0">
+					<div class="d-flex justify-content-start">
+						<span class="tag has-addons is-medium" :style="{color: label.color_text, backgroundColor: label.color_background}">${ label.name }</span>
+						<b-button variant="link" class="text-dark align-self-end ml-auto" @click="editLabel(label)">
+							<svg class="icon icon-pencil"><use xlink:href="#icon-pencil"></use></svg>
+							<symbol id="icon-pencil" viewBox="0 0 16 16">
+								<title>pencil</title>
+								<path d="M13.5 0c1.381 0 2.5 1.119 2.5 2.5 0 0.563-0.186 1.082-0.5 1.5l-1 1-3.5-3.5 1-1c0.418-0.314 0.937-0.5 1.5-0.5zM1 11.5l-1 4.5 4.5-1 9.25-9.25-3.5-3.5-9.25 9.25zM11.181 5.681l-7 7-0.862-0.862 7-7 0.862 0.862z"></path>
+							</symbol>
+						Редактировать
+				  	</b-button>
+						<b-button variant="link" class="text-dark align-self-end ml-1" @click="deleteLabel(label)">
+							<svg class="icon icon-bin"><use xlink:href="#icon-bin"></use></svg>
+							<symbol id="icon-bin" viewBox="0 0 16 16">
+								<title>bin</title>
+								<path d="M2 5v10c0 0.55 0.45 1 1 1h9c0.55 0 1-0.45 1-1v-10h-11zM5 14h-1v-7h1v7zM7 14h-1v-7h1v7zM9 14h-1v-7h1v7zM11 14h-1v-7h1v7z"></path>
+								<path d="M13.25 2h-3.25v-1.25c0-0.412-0.338-0.75-0.75-0.75h-3.5c-0.412 0-0.75 0.338-0.75 0.75v1.25h-3.25c-0.413 0-0.75 0.337-0.75 0.75v1.25h13v-1.25c0-0.413-0.338-0.75-0.75-0.75zM92h-3v-0.987h3v0.987z"></path>
+							</symbol>
+						Удалить
+				  	</b-button>
+					</div>
+				  <div v-show="label === active_edit">
+				  	<div class="d-flex flex-row justify-content-start pt-2">
+		  				<b-form >
+		  					<b-input
+      						id="label_name_edit"
+      						class="mb-2 mr-sm-2 mb-sm-0"
+      						placeholder="Введите название"
+      						v-model="label.name">	
+      					</b-input>
+		  				</b-form>
+		  				<button type="button" class="btn btn-info align-self-end ml-3" @click="getColor(label)">Случайный цвет</button>
+		  				<button type="button" class="btn btn-outline-danger align-self-end ml-auto" @click="repealEdit(label)">Отменить</button>
+		  				<button type="button" class="btn btn-outline-success align-self-end ml-1" @click="saveEditChanges(label)">Сохранить изменения</button>
+		  			</div>
+		  		</div>
+				</b-list-group-item>
+			</b-list-group>
+		</b-card>
+	</div>
 </div>
 
 {% endblock %}
