--- a/source/server/static/css/style.css
+++ b/source/server/static/css/style.css
@@ -201,3 +201,12 @@ Base Content
   margin: 0.2em;
   font-weight: 700;
 }
+
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
