--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'css/bulma-tag.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'css/bulma-close-button.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/all.min.css' %}">
 
   <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script> -->
   <script src="https://unpkg.com/vue@latest/dist/vue.js"></script>
