--- a/source/server/annotation/templates/project_export.html
+++ b/source/server/annotation/templates/project_export.html
@@ -2,6 +2,43 @@
 
 {% block project-content %}
 
-<h1>Что то про экспорт</h1>
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">Выберите тип файла для скачивания</h5>
+    <div class="tabset">
+    
+      <input type="radio" name="tabset" id="tab1" aria-controls="conllu" value="conllup">
+      <label for="tab1">conllu</label>
+      
+      <input type="radio" name="tabset" id="tab2" aria-controls="some" value="some">
+      <label for="tab2">Что-то ещё</label>
+
+      <div class="tab-panels">
+        <section id="conllu" class="tab-panel">
+          <h2>CoNLL-U Plus</h2>
+          <p>
+            Является расширением формата CoNLL-U. Может иметь любое количество столбцов.
+            <a href="https://universaldependencies.org/ext-format.html">Формат.</a>
+            Должен быть в кодировке UTF-8.
+          </p>
+        </section>
+        <section id="some" class="tab-panel">
+          <h2>Другой формат</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Harum nihil deleniti labore eos ratione, omnis nam fuga dignissimos
+            architecto eum temporibus voluptate molestiae iusto ipsam,
+            quisquam rem hic mollitia earum.
+          </p>
+        </section>
+      </div>
+    </div>
+    <form>
+      <div class="form-group">
+        <button type="button" class="btn btn-primary">Скачать проект</button>
+      </div>
+		</form>
+  </div>
+</div>
 
 {% endblock %}
