--- a/source/server/annotation/templates/project_tl_annotation.html
+++ b/source/server/annotation/templates/project_tl_annotation.html
@@ -11,7 +11,7 @@
 	
 	<p>Имя файла: ${doc.file_name}</p>
 
-	<div class="card w-75">
+	<div class="card">
 
 		<div class="card-header">
 			<div
@@ -33,20 +33,29 @@
 			<!-- <tl-label v-for="seq in doc_data" class="tl_anno_row">${seq}</tl-label> -->
 
 			<div v-for="data in doc_render" class="tl_anno_row" @click="setSelectedRange(data.obj.id)">
-				<span v-for="(chunk, i_chunk) in data.chunks"
+				<span 	
+					v-for="(chunk, i_chunk) in data.chunks"
 					v-bind:class="{ tag: chunk.type == 'label', 'is-medium': chunk.type == 'label' }"
 					v-bind:style="[chunk.type == 'label' ? {
-							'background-color': labels_hash[chunk.obj.label].color_background,
-							'color': labels_hash[chunk.obj.label].color_text,
-							'text-indent': '0px'
-						} : {}]"
-						:id="i_chunk">${chunk.text}
+						'background-color': labels_hash[chunk.obj.label].color_background,
+						'color': labels_hash[chunk.obj.label].color_text,
+						'text-indent': '0px'
+					} : {}]"
+					:id="data.obj.id.toString() + '-' + i_chunk.toString()">${chunk.text}
 					<button 
 						v-if="chunk.type == 'label'"
 						@click="onDeleteLabel(chunk.obj.id, data.obj.id, i_chunk)"
 						type="button btn-sm"
 						class="delete is-small">
 					</button>
+
+					<b-tooltip
+						:target="data.obj.id.toString() + '-' + i_chunk.toString()"
+						v-if="chunk.type == 'label'"
+						placement="top"
+						container="'body'">
+						${labels_hash[chunk.obj.label].name}
+					</b-tooltip>
 				</span>
 			</div>
 
