Show suffix_key

--- a/source/server/annotation/templates/project_tl_annotation.html
+++ b/source/server/annotation/templates/project_tl_annotation.html
@@ -28,7 +28,7 @@
 						@click="createLabel(label.id)">
 							${label.name}
 					</span>
-			  	<span class="tag is-dark">_</span>
+			  	<span class="tag is-dark">${label.suffix_key}</span>
 			</div>
 		</div>
 
