--- a/source/server/annotation/templates/project_tl_annotation.html
+++ b/source/server/annotation/templates/project_tl_annotation.html
@@ -16,7 +16,7 @@
 		<span v-if="!is_approved">Не проверен</span>
 	</b-form-checkbox>
 
-	<div class="card w-75">
+	<div class="card">
 
 		<div class="card-header">
 			<div
