--- a/source/server/annotation/templates/project_import.html
+++ b/source/server/annotation/templates/project_import.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}<title> Shanno - {{ project.name }} [Import] </title>{% endblock %}
+
 {% block project-content %}
 
 <div id="project-import" class="card">
