--- a/source/server/annotation/templates/project_page.html
+++ b/source/server/annotation/templates/project_page.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}<title> Shanno - {{ project.name }} </title>{% endblock %}
+
 {% block content %}
 
 <div class="projects-base">
