--- a/source/server/annotation/templates/project_tl_annotation.html
+++ b/source/server/annotation/templates/project_tl_annotation.html
@@ -2,8 +2,9 @@
 
 {% load static %}
 
-{% block project-content %}
+{% block title %}<title> Shanno - {{ project.name }} [Annotation] </title>{% endblock %}
 
+{% block project-content %}
 
 <h4 class="mb-4 mt-2">Аннотации</h4>
 
