--- a/source/server/annotation/templates/project_tl_labels.html
+++ b/source/server/annotation/templates/project_tl_labels.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}<title> Shanno - {{ project.name }} [Labels] </title>{% endblock %}
+
 {% block project-content %}
 
 <div class="container-fluid" id="project-labels">
