--- a/source/server/annotation/templates/project_export.html
+++ b/source/server/annotation/templates/project_export.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}<title> Shanno - {{ project.name }} [Export] </title>{% endblock %}
+
 {% block project-content %}
 
 <div class="card" id="project-export">
