--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  {% block title %}<title> Tittle </title>{% endblock %}
+  {% block title %}<title> Shanno - Annotation documents </title>{% endblock %}
 
   <meta charset="utf-8">
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
