--- a/source/server/annotation/templates/project_import.html
+++ b/source/server/annotation/templates/project_import.html
@@ -7,6 +7,12 @@
 {% block project-content %}
 
 <div id="project-import" class="card">
+
+  <div>
+    <b-alert dismissible :variant="st_variant" :show="st_show" @dismissed="st_show=false">${st_value}</b-alert>
+  </div>
+
+
   <div class="card-body">
     <h5 class="card-title">Выберите тип файла для загрузки</h5>
     <div class="tabset">
@@ -51,21 +57,13 @@ example	_
     </div>
 
     <form>
-      {% verbatim %}
-
       <p>Поддерживается загрузка архивов zip. Файл должен иметь соответствующие расширение (.zip).</p>
-
-      <div>
-        <b-alert dismissible v-bind:variant="st_variant" :show="st_show">{{st_value}}</b-alert>
-      </div>
 
       <div class="form-group">
         <div class="input-group input-file" name="file">
           <b-form-file v-model="files" plain></b-form-file>
         </div>
       </div>
-
-      {% endverbatim %}
 
       <div class="form-group">
         <button
@@ -77,8 +75,8 @@ example	_
             Загрузить
           </button>
       </div>
-
     </form>
+
   </div>
 </div>
 
