--- a/source/server/annotation/templates/project_tl_labels.html
+++ b/source/server/annotation/templates/project_tl_labels.html
@@ -7,6 +7,11 @@
 {% block project-content %}
 
 <div class="container-fluid" id="project-labels">
+
+	<div>
+	    <b-alert dismissible :variant="st_variant" :show="st_show" @dismissed="st_show=false">${st_value}</b-alert>
+	</div>
+
 	<div class="d-inline-flex">
 		<button type="button" class="btn btn-primary" v-on:click="createLabel()">Новая метка</button>
 	</div>
