--- a/source/server/annotation/templates/project_settings.html
+++ b/source/server/annotation/templates/project_settings.html
@@ -7,6 +7,11 @@
 {% block project-content %}
 
 <div class="card" id="project-settings">
+
+  <div>
+    <b-alert dismissible :variant="st_variant" :show="st_show" @dismissed="st_show=false">${st_value}</b-alert>
+  </div>
+
   <div class="card-body">
     <h5 class="card-title">Удаление проекта</h5>
     <p>Удалить проет <strong>{{ project.name }}</strong>?</p>
