--- a/source/server/annotation/templates/project_tl_annotation.html
+++ b/source/server/annotation/templates/project_tl_annotation.html
@@ -9,6 +9,10 @@
 <h4 class="mb-4 mt-2">Аннотации</h4>
 
 <div id="project-annotaion">
+
+	<div>
+		<b-alert dismissible :variant="st_variant" :show="st_show" @dismissed="st_show=false">${st_value}</b-alert>
+	</div>
 	
 	<p>Имя файла: ${doc.file_name}</p>
 
