--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -34,6 +34,7 @@
   {% endif %}
   <script src="{% static 'js/bootstrap-vue.min.js' %}"></script>
   <script src="{% static 'js/axios.min.js' %}"></script>
+  <script src="{% static 'js/vue-router.min.js' %}"></script>
 </head>
 <body id="root">
 
