Prefix Key may be is empty.

--- a/source/server/annotation/templates/project_tl_labels.html
+++ b/source/server/annotation/templates/project_tl_labels.html
@@ -35,6 +35,7 @@
 		  			<template v-slot:first>
         			<option :value="null" disabled>prefix key</option>
       			</template>
+      			<option value=""></option>
       			<option value="ctrl">ctrl</option>
       			<option value="shift">shift</option>
 		  		</b-form-select>
@@ -81,6 +82,7 @@
 		  					<template v-slot:first>
         					<option :value="null" disabled>prefix key</option>
       					</template>
+      					<option value=""></option>
       					<option value="ctrl">ctrl</option>
       					<option value="shift">shift</option>
 		  				</b-form-select>
