base menu, sidebar

--- a/source/server/templates/index.html
+++ b/source/server/templates/index.html
@@ -1,7 +1,66 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="https://unpkg.com/buefy/dist/buefy.min.css">
+	<title>Document</title>
+</head>
+<body>
+	<b-navbar id="app" class="is-dark">
+		<template slot="brand">
+			<b-navbar-item href="/">
+				<span class="is-size-5">Shanno</span>
+			</b-navbar-item>
+		</template>
+		<template slot="start">
+			<b-navbar-item class="{% if request.resolver_match.url_name == 'index' %}is-active{% endif %}" href="/">
+				Home
+			</b-navbar-item>
+			<b-navbar-item class="{% if request.resolver_match.url_name|slice:':8' == 'projects' %}is-active{% endif %}" href="/projects/">
+				Projects
+			</b-navbar-item>
+		</template>
+	</b-navbar>
 
-{% block content %}
+	<section class="columns is-fullheight">
+		<aside class="column is-3 is-narrow-mobile is-fullheight section has-background-dark">
+  <ul class="menu-list">
+    <li><a class="has-text-white">test</a></li>
+    <li><a class="has-text-white">test</a></li>
+    <li><a class="has-text-white">test</a></li>
+    <li><a class="has-text-white">test</a></li>
+    <li><a class="has-text-white">test</a></li>
+    <li><a class="has-text-white">test</a></li>
+  </ul>
+		</aside>
+		<div class="container column is-9">
+			<div class="section">
+				<div class="card">
+					<div class="card-header">
+						<p class="card-header-title">Заголовок</p>
+					</div>
+					<div class="card-content">
+						<div class="content">
+							Название
+						</div>
+						<div class="columns">
+							<div class="column">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere obcaecati possimus commodi ex omnis ea repellat magnam magni nulla ipsa ut quod officia, ducimus adipisci non suscipit necessitatibus voluptatem! Quidem.
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
-Index - only show
+	<script src="https://unpkg.com/vue"></script>
+	<script src="https://unpkg.com/buefy/dist/buefy.min.js"></script>
 
-{% endblock %}
+	<script>
+		new Vue({
+			el: '#app'
+		})
+	</script>
+</body>
+</html>
