--- a/source/server/templates/index.html
+++ b/source/server/templates/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="https://unpkg.com/buefy/dist/buefy.min.css">
+	<!-- <link rel="stylesheet" href="https://unpkg.com/buefy/dist/buefy.min.css"> -->
+	<link rel="stylesheet" href="https://unpkg.com/bulmaswatch/darkly/bulmaswatch.min.css">
 	<title>Document</title>
 </head>
 <body>
@@ -22,18 +23,18 @@
 		</template>
 	</b-navbar>
 
-	<section class="columns is-fullheight">
+	<section class="columns is-fullheight ">
 		<aside class="column is-2 is-narrow-mobile is-fullheight section">
-			<p class="menu-label">
-				{{ project.name }}
+			<p class="menu-label is-size-6">
+				{{ project.name }} 123123123
 			</p>
 			<ul class="menu-list">
 				<li><a href="/projects/{{project.id}}/" class="{% if request.resolver_match.kwargs.action is None %}active{% endif %}">Инфо</a></li>
 				<li><a href="import" class="{% if request.resolver_match.kwargs.action == 'import' %}active{% endif %}">Импорт</a></li>
 				<li><a href="export" class="{% if request.resolver_match.kwargs.action == 'export' %}active{% endif %}">Экспорт</a></li>
-				<hr class="has-background-dark is-marginless">
+				<hr class="has-background-light is-marginless">
 				<li><a href="tl-labels" class="{% if request.resolver_match.kwargs.action == 'tl-labels' %}active{% endif %}">Метки</a></li>
-				<hr class="has-background-dark is-marginless">
+				<hr class="has-background-light is-marginless">
 				<li><a href="settings" class="{% if request.resolver_match.kwargs.action == 'settings' %}active{% endif %}">Настройки</a></li>
 			</ul>
 		</aside>
